--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -4908,6 +4908,20 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2015.09.22}
 }
 
+@article{Lewis2001,
+  Title                    = {{A Likelihood Approach to Estimating Phylogeny from Discrete Morphological Character Data}},
+  Author                   = {Lewis, Paul O.},
+  Journal                  = SYSBIO,
+  Year                     = {2001},
+  Number                   = {6},
+  Pages                    = {913-925},
+  Volume                   = {50},
+  
+  Owner                    = {pett},
+  Publisher                = {Oxford University Press},
+  Timestamp                = {2016.12.23}
+}
+
 @Article{Lewis2005,
   Title                    = {{Polytomies and Bayesian Phylogenetic Inference}},
   Author                   = {Lewis, P.O. and Holder, M.T. and Holsinger, K.E.},
