--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -2692,6 +2692,14 @@ Coalescence Theory, Population Size, Divergence Times},
   Timestamp                = {2012.08.01}
 }
 
+@article{Gavryushkina2016,
+  Title                    = {Bayesian Total-Evidence Dating Reveals the Recent Crown Radiation of Penguins},
+  Author                   = {Gavryushkina, Alexandra and Heath, Tracy A. and Ksepka, Daniel T. and Stadler, Tanja and Welch, David and Drummond, Alexei J.}, 
+  Journal                  = SYSBIO,
+  Year                     = {2016}, 
+  DOI                      = {10.1093/sysbio/syw060}
+}
+
 @Article{Gelfand1990,
   Title                    = {Sampling-Based Approaches to Calculating Marginal Densities},
   Author                   = {Gelfand, Alan E. and Smith, Adrian F. M.},
