--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1,11 +1,11 @@
 
-\section{Introduction}
+\section{Introduction}\label{subsub:Intro-Main}
 
 \citet{Ronquist2012a} 
 
 Exercise is in Section \ref{sect:RB-ExerciseMain}.
 
-\subsection{Models}
+\subsection{Models}\label{subsect:Intro-Models}
 
 The focus of this tutorial is to introduce you to specifying the models used in an analysis of fossil and extant taxa. 
 
@@ -17,7 +17,7 @@ The focus of this tutorial is to introduce you to specifying the models used in 
 \end{figure}
 
 
-\subsubsection{Lineage Diversification and Sampling}
+\subsubsection{Lineage Diversification and Sampling}\label{subsub:Intro-FBD}
 
 Birth-death processes and FBD
 
@@ -29,12 +29,12 @@ Birth-death processes and FBD
 \end{figure}
 
 
-\subsubsection{Sequence Evolution}
+\subsubsection{Sequence Evolution}\label{subsub:Intro-GTR}
 
-In this tutorial, our molecular data are best analyzed with a General Time-Reversible model of sequence evolution and gamma-distributed rate heterogeneity.
+In this tutorial, our molecular data are best analyzed with a general time-reversible model of sequence evolution and gamma-distributed rate heterogeneity.
 This model of sequence evolution is covered thoroughly in the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.pdf}{RB\_CTMC\_Tutorial}.
 
-\subsubsection{Morphological Character Change}
+\subsubsection{Morphological Character Change}\label{subsub:Intro-Morpho}
 
 The incorporation of morphological data from fossils into phylogenetic analyses allows us to directly observe organisms that existed in the past.
 The Mk model \citep{Lewis2001} uses a generalized Jukes-Cantor matrix to allow for the incorporation of morphology into likelihood and Bayesian analyses.
@@ -64,13 +64,13 @@ Therefore, it is important to use models that can condition on the coding bias.
 RevBayes has two ways of doing this: one is used for datasets in which only parsimony informative characters are observed; the other is for datasets in which parsimony informative characters and non-parsimony informative variable characters (such as autapomorphies) are observed. \par
 
 
-\subsubsection{Lineage-Specific Rates of Evolution}
+\subsubsection{Lineage-Specific Rates of Evolution}\label{subsub:Intro-UExp}
 
 Rates of nucleotide sequence evolution can vary widely among lineages, and so models that account for this variation by relaxing the assumption of a strict molecular clock can allow for more accurate estimates of substitution rates and divergence times \citep{Drummond2006}.
 The simplest type of relaxed clock model assumes that lineage-specific substitution rates are independent or ``uncorrelated''.
 One example of such an uncorrelated relaxed model is the ``Uncorrelated exponential relaxed clock'' (or UExp), in which the substitution rate for each lineage is assumed to be independent and identically distributed according to an exponential distribution (depicted in Fig. \ref{fig:uexp_gm}).
 This is the model that we will use in this tutorial.
-Another possible uncorrelated relaxed clock model is the Uncorrelated Lognormal model, described in the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Dating_Tutorial/RB_Dating_Tutorial.pdf}{RB\_Dating\_Tutorial}.
+Another possible uncorrelated relaxed clock model is the uncorrelated lognormal model, described in the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Dating_Tutorial/RB_Dating_Tutorial.pdf}{RB\_Dating\_Tutorial}.
 \begin{figure}[h!]
 \centering
 \includegraphics[scale=0.3,angle=0]{\ResourcePath figures/tikz/uexp_gm}
@@ -670,7 +670,7 @@ moves[mvi++] = mvScale(clock_morpho, lambda=1,    weight=4.0)
 
 As in our molecular data partition, we now combine our data and our model. There are some unique aspects to doing this for morphology. \par
 You will notice that we have an option called \cl{coding}. This option allows us to condition on biases in the way the morphological data were collected (ascertainment bias).
-The option \cl{coding=variable} specifies that we should correct for coding only variable characters (discussed in \ref{subsubsection{Morphological Character Change}}). \par
+The option \cl{coding=variable} specifies that we should correct for coding only variable characters (discussed in \ref{subsub:Intro-Morpho}). \par
 
 We use the flag \cl{siteMatrices=true} to indicate that we are providing multiple Q matrices generated as a function of our state frequency variation model. \par
 
