--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -2145,6 +2145,20 @@ Coalescence Theory, Population Size, Divergence Times},
   Timestamp                = {2012.09.25}
 }
 
+@Article{Felsenstein1992,
+ Title                     = {{Phylogenies from Restriction Sites: A Maximum-Likelihood Approach}},
+ Author                    = {Joseph Felsenstein},
+ Journal                   = {Evolution},
+ Year                      = {1992},
+ Number                    = {1},
+ Pages                     = {159-173},
+ Volume                    = {46},
+ 
+ ISSN                      = {00143820, 15585646},
+ URL                       = {http://www.jstor.org/stable/2409811},
+ Publisher                 = {[Society for the Study of Evolution, Wiley]},
+}
+
 @Article{Felsenstein1988,
   Title                    = {Phylogenies from Molecular Sequences: Inference and Reliability},
   Author                   = {Felsenstein,J},
