--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -348,7 +348,7 @@ moves[mvi++] = mvScale(psi, lambda=1,    weight=1)
 
 \subsubsection{The Origin Time}\label{subsub:RB-FBD-Origin}
 
-Under the FBD model, the process is can be conditioned on the age of the origin, or the age of the root.
+The FBD process can be conditioned on the age of the origin, or the age of the root \citep{Stadler2010}.
 In our case, we will condition on the origin time of bears, and
 we will specify a uniform distribution on the origin age.
 For this parameter, we will use a sliding window move. A sliding window samples a parameter uniformly within an interval (defined by the half-width \cl{delta}). 
